test/conformance/chainsaw/webhooks/wildcard/01-policy.yaml
---
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: TestStep
metadata:
  creationTimestamp: null
  name: policy
spec:
  apply:
  - file: policy.yaml
  assert:
  - file: policy-assert.yaml
